@@ -1,5 +1,3 @@
-- tiff write does not support [strip]
-
 - add more webp tests to py suite
 
 - try moving some more of the CLI tests to py
